# publisher-billing-lite

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
apps/api/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20251213_2133_daa033267bcf_initial_schema_with_campaigns_line_.py  20251215_2140_3617dafa59d0_add_users_comments_and_comment_mentions_.py  20251216_2124_d0520053c523_add_password_hash_to_users.py  20251217_2045_efbedfa0cf27_add_change_history_table.py  20251217_2251_7916de66bc80_add_notifications_table.py  20251219_0000_a5020676b7cb_add_procrastinate_schema.py  20251219_1811_5d7c2e80359d_add_gin_index_on_campaigns_name.py
apps/api/app/: db.py  main.py  seed.py  settings.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: auth.py  campaigns.py  comments.py  hello.py  history.py  invoice_line_items.py  invoices.py  notifications.py  router.py  users.py
apps/api/app/models/: __init__.py  campaign.py  change_history.py  comment.py  comment_mention.py  invoice.py  invoice_line_item.py  line_item.py  notification.py  timestamp_mixin.py  user.py
apps/api/app/queue/: __init__.py  change_history_queue.py  procrastinate_app.py
apps/api/app/queue/tasks/: __init__.py  change_history.py
apps/api/app/repositories/: __init__.py  campaign_repository.py  change_history_repository.py  comment_repository.py  invoice_line_item_repository.py  invoice_repository.py  notification_repository.py  user_repository.py  utils.py
apps/api/app/schemas/: __init__.py  auth.py  base.py  campaign.py  change_history.py  comment.py  invoice.py  invoice_line_item.py  line_item.py  notification.py  user.py
apps/api/app/seeds/: users.json
apps/api/app/services/: __init__.py  auth_service.py  campaign_service.py  change_history_service.py  comment_service.py  errors.py  invoice_line_item_service.py  invoice_service.py  mention_service.py  money.py  notification_broadcaster.py  notification_queue.py  notification_service.py  user_service.py
apps/api/app/workers/: change_history_worker.py  notification_worker.py
apps/api/tests/: conftest.py
apps/api/tests/api/: conftest.py  test_auth_api.py  test_campaigns_api.py  test_comments_api.py  test_history_api.py  test_invoice_line_items_api.py  test_invoices_api.py  test_notifications_api.py  test_users_api.py
apps/api/tests/integration/: test_campaign_repository.py  test_change_history_repository.py  test_comment_repository.py  test_invoice_line_item_repository.py  test_invoice_repository.py  test_notification_repository.py  test_notification_worker.py  test_user_repository.py
apps/api/tests/unit/: test_auth_service.py  test_change_history_service.py  test_mentions.py  test_money.py  test_notification_broadcaster.py  test_notification_service.py
(+76 files in other folders)
