[project]
name = "publisher-billing-api"
version = "0.1.0"
description = "Publisher Billing Lite API"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "fastapi",
    "asyncpg",
    "sqlalchemy>=2,<3",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "black>=24",
    "mypy>=1",
    "pre-commit>=3",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
